# Nebula-Forge

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASES.md  SKILL_COOKBOOK.md  USER_GUIDE.md
nebula_forge/: __init__.py  __main__.py  app.py  cookbook.py  marketplace.py  mcp_builder.py  models.py  provisioner.py  radar.py  session_parser.py  skill_scorer.py  sync.py  theme_engine.py  vault.py  vault_v2.py
nebula_forge/screens/: __init__.py  blueprint.py  mcp_builder.py  project_screen.py  radar_screen.py  session_replay.py  skill_factory.py  splash.py  vault_screen.py  wizard.py
nebula_forge/themes/: tokyo_night.tcss
nebula_forge/themes/overrides/: dracula.tcss  gruvbox.tcss  nord.tcss  tokyo_night.tcss
tests/: test_cookbook.py  test_skill_scorer.py  test_theme_engine.py
