[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nebula-forge"
version = "1.0.0"
description = "The Agentic Orchestrator — SWE Workflow TUI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nebula-forge" }]
keywords = ["cli", "tui", "agents", "ai", "llm", "devtools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "textual>=0.80.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pyfiglet>=1.0.2",
    "click>=8.1.7",
]

[project.scripts]
nebula-forge = "nebula_forge.__main__:main"
nf = "nebula_forge.__main__:main"

[project.optional-dependencies]
dev = [
    "textual-dev>=1.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["nebula_forge"]

[tool.hatch.build.targets.wheel.force-include]
"nebula_forge/themes" = "nebula_forge/themes"
